<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_black"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".ui.home.CastDetailActivity">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:elevation="40dp"
        android:foreground="?selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:animateLayoutChanges="false"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:transitionName="cast_image"
                    app:shapeAppearanceOverlay="@style/roundedImageView"
                    tools:src="@drawable/ic_launcher_background" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/extra_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Original name" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/biography"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    tools:text="asdasdasdas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/known_for"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/known_for"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="12312" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/also_know_as"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="abc" />

                <LinearLayout
                    android:id="@+id/external_id_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/external_links"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/external_links_chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/recommended_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movies_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cast_movies_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        android:paddingHorizontal="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="10"
                        tools:listitem="@layout/movie_poster_tile" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>