<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/pure_black">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/close_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="?selectableItemBackgroundBorderless"
        android:elevation="20dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_arrow_back_24" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/like_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="?selectableItemBackgroundBorderless"
        android:elevation="20dp"
        android:foregroundTint="@color/white"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:tint="@color/white" />


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/pink" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/movie_details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:visibility="invisible"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/movie_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="420dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/poster_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="20dp">

                    <ImageView
                        android:id="@+id/movie_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:scaleType="fitXY"
                        tools:src="@drawable/ic_launcher_background" />
                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/movie_banner"
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:foreground="@drawable/gradient"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_launcher_background" />

                <ImageView
                    android:id="@+id/gradient"
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:foreground="@drawable/gradient_reverse" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/extra_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="Movie Name" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/year_of_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/genre"
                        android:drawablePadding="10dp"
                        android:textColor="@color/white_med"
                        android:textSize="14sp"
                        app:drawableEndCompat="@drawable/ic_baseline_circle_24"
                        app:drawableTint="@color/med_grey"
                        tools:text="2020" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:gravity="center"
                        android:textColor="@color/white_med"
                        android:textSize="14sp"
                        tools:text="Genre" />

                    <TextView
                        android:id="@+id/run_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/genre"
                        android:drawablePadding="10dp"
                        android:textColor="@color/white_med"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/ic_baseline_circle_24"
                        app:drawableTint="@color/med_grey"
                        tools:text="200 mins" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_star_rate_24"
                        app:tint="@color/gold" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        tools:text="7.5" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/plot_summary"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:ellipsize="end"
                    android:textColor="@color/med_grey"
                    android:textSize="14sp"
                    tools:text="Overview" />

                <TextView
                    android:id="@+id/creators"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/creators"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/creators_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:ellipsize="end"
                    android:textColor="@color/med_grey"
                    android:textSize="14sp"
                    tools:text="Overview" />

                <LinearLayout
                    android:id="@+id/cast_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/cast"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cast_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        android:paddingHorizontal="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="5"
                        tools:listitem="@layout/cast_item" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/video_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/videos"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/video_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        android:paddingHorizontal="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="5"
                        tools:listitem="@layout/video_item" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/save_address_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:height="60dp"
                android:backgroundTint="@color/pink"
                android:elevation="12dp"
                android:letterSpacing="0"
                android:shadowColor="@color/pink"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
